--- a/example/src/assets/styles/app.scss
+++ b/example/src/assets/styles/app.scss
@@ -1,11 +1,11 @@
 /* ==========================================================================
    React flux starter
    ========================================================================== */
-@import "variables";
-@import "mixins";
-@import "animations";
-@import "components/pre-render";
-@import "components/page";
-@import "components/header";
-@import "components/footer";
-@import "pages/home";
+@use "variables";
+@use "mixins";
+@use "animations";
+@use "components/pre-render";
+@use "components/page";
+@use "components/header";
+@use "components/footer";
+@use "pages/home";
