--- a/example/src/assets/styles/components/_pre-render.scss
+++ b/example/src/assets/styles/components/_pre-render.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@use "../variables";
+
 /* Pre-render
    ========================================================================== */
 .pre-render {
@@ -11,8 +14,8 @@
   &__spinner {
     width: 48px;
     height: 48px;
-    border: 1px solid lighten($primary, 40%);
-    border-left-color: darken($primary, 10%);
+    border: 1px solid color.adjust(variables.$primary, $lightness: 40%);
+    border-left-color: color.adjust(variables.$primary, $lightness: -10%);
     border-radius: 50%;
     animation: spinner 700ms infinite linear;
     position: absolute;
