--- a/src/notifications.css
+++ b/src/notifications.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Notification';
+  src: url('~fonts/notification.eot');
+  src: url('~fonts/notification.eot') format('embedded-opentype'),
+  url('~fonts/notification.woff') format('woff'),
+  url('~fonts/notification.ttf') format('truetype'),
+  url('~fonts/notification.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .notification-container {
   box-sizing: border-box;
   position: fixed;
@@ -97,6 +108,6 @@
 .notification-error {
   background-color: #bd362f;
   &:before {
-    content: "\f057";
+    content:  "\f057";
   }
 }
